sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11: error: not found: value combSort11
		combSort11();
                ^AlgCombSort11:9: error: not found: value ecrat
      if (ecart==9 || ecrat==10){
                      ^